@@ -383,6 +383,11 @@ PHP 8.4 UPGRADE NOTES
   . ResourceBundle::get() now has a tentative return type of:
     ResourceBundle|array|string|int|null
 
+- LibXML:
+  . libxml_set_streams_context() now immediately throws a TypeError when a
+    non-stream-context resource is passed to the function, instead of throwing
+    later when the stream context is used.
+
 - MBString:
   . The behavior of mb_strcut is more consistent now on invalid UTF-8 and UTF-16
     strings. (For valid UTF-8 and UTF-16 strings, there is no change.)
